--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.5.2",
+    "sweetalert2": "^8.15.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
