--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "jspdf": "^1.5.3",
     "popper.js": "^1.15.0",
     "rxjs": "~6.5.2",
     "sweetalert2": "^8.15.1",
@@ -39,6 +40,7 @@
     "@angular/language-service": "~8.1.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jspdf": "^1.3.1",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
