--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
+    "ng2-pdf-viewer": "^5.3.4",
+    "pdfjs": "^2.3.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.5.2",
     "sweetalert2": "^8.15.1",
